[metadata]
name = gmxapi
version = attr: gmxapi.__version__
description = gmxapi Python interface for GROMACS.
url = http://gmxapi.org/
author = GROMACS gmxapi team
author_email = info@gmxapi.org
long_description = file: README.rst
;keywords = one, two
license = LGPL
;classifiers =
;    Framework :: Django
;    License :: OSI Approved :: BSD License
;    Programming Language :: Python :: 3
;    Programming Language :: Python :: 3.5

[options]
python_requires = >=3.7
; Note that we also hard code some Python version checking in setup.py.
zip_safe = False
package_dir=
    =src
packages = find:
install_requires =
    mpi4py
    packaging
    networkx>=2.0
    numpy>1.7

[options.packages.find]
where=src

[options.package_data]
gmxapi = gmxconfig.json
